--- a/dev/sass/variables.scss
+++ b/dev/sass/variables.scss
@@ -1,8 +1,17 @@
 ///fonts///
-$font-primary: "Open Sans";
+$font-primary: "Geometria";
 $font-secondary:  "monospace";
-$font-size: 16px;
+ 
 
 ///colors///
-$primary-color: #222;
-$secondary-color: #f00;
+$background: #080807;
+$system: #10100E;
+$stroke: #4F4F4F;
+$body-text: #8A9385;
+$titles: #F7FFEE;
+
+$accent: #B1FF5C;
+$accent-hover: #9AF03C;
+$accent-secondary: #42882A;
+$errors: #FF3D3D;
+$verification: #FFB444;
