--- a/dev/templates/head.html
+++ b/dev/templates/head.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="theme-color" content="#B1FF5C">
+ 
+     <link rel="shortcut icon" type="image/svg" href="./assets/img/favicon.svg" >  
+    <!-- <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png"> -->
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
     <title>Onebit 02.10</title>
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
