--- a/dev/sass/global.scss
+++ b/dev/sass/global.scss
@@ -14,6 +14,45 @@ h6 {
     color: $titles;
 }
 
+h1 {
+    font-size: 58px;
+    line-height: 70px;
+}
+
+h2 {
+    font-size: 48px;
+    line-height: 60px;
+}
+
+h3 {
+    font-size: 36px;
+    line-height: 34px;
+}
+
+h4 {
+    font-size: 32px;
+    line-height: 42px;
+}
+
+h5 {
+    font-size: 24px;
+    line-height: 20px;
+}
+
+h6 {
+    font-size: 20px;
+    line-height: 34px;
+}
+
+a {
+    color: $accent;
+    text-decoration: none;
+    
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
 .color-list {
     display: grid;
     grid-gap: 12px;
@@ -164,6 +203,8 @@ h6 {
         background-color: $accent-hover;
     }
 }
+
+
 
 ::selection {
     color: $system;
