--- a/dev/sass/variables.scss
+++ b/dev/sass/variables.scss
@@ -13,5 +13,8 @@ $titles: #F7FFEE;
 $accent: #B1FF5C;
 $accent-hover: #9AF03C;
 $accent-secondary: #42882A;
+
+$controll-btn-bg: #152108;
+
 $errors: #FF3D3D;
 $verification: #FFB444;
