--- a/dev/sass/global.scss
+++ b/dev/sass/global.scss
@@ -160,9 +160,10 @@ a {
         padding: 8px 8px;
         border-radius: 8px;
         width: 56px;
+        max-width: 56px;
         height: 56px;
         position: relative;
-
+        
         &:hover {
             border-color: $body-text;
         }
