feat: show/hide password field

--- a/dev/sass/form.scss
+++ b/dev/sass/form.scss
@@ -20,6 +20,7 @@ input {
     font-size: 20px;
     padding: 26.5px 30px;
     transition: .3s;
+    width: 100%;
 
     &::-webkit-outer-spin-button,
     &::-webkit-inner-spin-button {
@@ -158,4 +159,22 @@ input {
             }
         }
     }
+}
+
+
+
+
+ 
+.hideShowPassword-toggle {
+    background: url(./assets/img/icon-eye.svg) center/contain no-repeat transparent;
+    cursor: pointer;
+    width: 24px;
+    height: 24px;
+    transform: translate(-30px, 0);
+    font-size: 0;
+    border: none;
+}
+
+.hideShowPassword-toggle-hide {
+    background: url(./assets/img/icon-eye-active.svg) center/contain no-repeat transparent;
 }
