--- a/dev/templates/footer.html
+++ b/dev/templates/footer.html
@@ -22,6 +22,7 @@ style="background-color: #B1FF5C;
  ">UI kit</a>
 <script src="assets/js/jquery-3.7.1.min.js"></script>
 <script src="assets/js/jquery.mask.min.js"></script>
+<script src="assets/js/hideShowPassword.min.js"></script>
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/custom.js"></script>
 </body>
