--- a/dev/sass/form.scss
+++ b/dev/sass/form.scss
@@ -20,6 +20,7 @@ input {
     font-size: 20px;
     padding: 26.5px 30px;
     transition: .3s;
+    width: 100%;
 
     &::-webkit-outer-spin-button,
     &::-webkit-inner-spin-button {
@@ -47,7 +48,7 @@ input {
 }
 
 .template-form {
-    padding: 0 12px;
+    padding: 0 86px 0 12px;
     max-width: 729px;
     position: relative;
 
@@ -87,8 +88,7 @@ input {
 
 .page-login {
     .template-form {
-        margin: 100px auto;
-
+        margin: 100px auto 100px 500px;
     }
 }
 
@@ -158,4 +158,22 @@ input {
             }
         }
     }
+}
+
+
+
+
+ 
+.hideShowPassword-toggle {
+    background: url(./assets/img/icon-eye.svg) center/contain no-repeat transparent;
+    cursor: pointer;
+    width: 24px;
+    height: 24px;
+    transform: translate(-30px, 0);
+    font-size: 0;
+    border: none;
+}
+
+.hideShowPassword-toggle-hide {
+    background: url(./assets/img/icon-eye-active.svg) center/contain no-repeat transparent;
 }
