--- a/dev/sass/variables.scss
+++ b/dev/sass/variables.scss
@@ -7,7 +7,7 @@ $font-secondary:  "monospace";
 $background: #080807;
 $system: #10100E;
 $stroke: #4F4F4F;
-$body-text: #8A9385;
+$body-text: #8E938C;
 $titles: #F7FFEE;
 
 $accent: #B1FF5C;
