style: header desktop and mobile done

--- a/dev/sass/global.scss
+++ b/dev/sass/global.scss
@@ -118,6 +118,10 @@ a {
     padding: 7px 48px 11px;
     border-radius: 5px;
 
+    &:hover {
+        text-decoration: none;
+    }
+
     &.btn-primary {
         background-color: $accent;
         border-color: $accent;
