--- a/dev/sass/header.scss
+++ b/dev/sass/header.scss
@@ -1,4 +1,19 @@
 header {
+    .navbar {
+        padding: 0;
+
+        &-brand {
+            padding: 0;
+            margin-right: 22px;
+        }
+    }
+
+    .container {
+        max-width: 1920px;
+        padding: 50px;
+        position: relative;
+    }
+
     .nav-link {
         color: $titles;
 
@@ -12,16 +27,29 @@ header {
             }
         }
     }
+
+    .btn-registration {
+        padding: 7px 15px 11px;
+    }
 }
 
 .login {
-    .btn-restration {
+    .btn-registration {
         display: none;
     }
 
-    .btn-user,
+    
     .btn-exit {
         display: block;
+    }
+
+    .btn-user {
+        width: 56px;
+        height: 56px;
+        padding: 5px 5px 8px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
 
@@ -43,6 +71,19 @@ header {
     }
 }
 
+.navbar-nav_main-navigation {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+
+    .nav-item {
+        .nav-link {
+            padding-left: 15px;
+            padding-right: 15px;
+        }
+    }
+}
 
 .dropdown-toggle::after {
     display: inline-block;
@@ -63,6 +104,7 @@ header {
         border-radius: 8px;
         padding: 5px 0;
         border: 1px solid $stroke;
+
         .dropdown-item {
             color: $titles;
             padding: 20px 25px 21px;
@@ -99,4 +141,35 @@ header {
 
 .navbar-nav_language {
     @extend .navbar-nav_country;
+    padding-left: 30px;
+    padding-right: 30px;
+
+    .dropdown-toggle {
+        &:after {
+            display: none;
+        }
+    }
+}
+
+
+.navbar-nav_small {
+
+
+    .dropdown-menu {
+        min-width: auto;
+
+        .dropdown-item {
+            padding: 8px 25px 9px;
+        }
+    }
+}
+
+.navbar-nav_middle {
+    .dropdown-menu {
+        min-width: auto;
+
+        .dropdown-item {
+            padding: 16px 25px 17px;
+        }
+    }
 }
