--- a/dev/sass/media/_media_max_width1024.scss
+++ b/dev/sass/media/_media_max_width1024.scss
@@ -1,4 +1,177 @@
 @media screen and (max-width: 1024px) {
+    header {
+        .container {
+            padding: 11px 20px;
+
+            &::after {
+                content: "";
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                width: 100vw;
+                border: 1px solid #242424;
+            }
+        }
+
+        .navbar-brand {
+            margin-right: 0;
+            display: flex;
+
+            img {
+                max-height: 25px;
+            }
+        }
+    }
+
+    .login {
+        .btn-user {
+            width: 44px;
+            height: 44px;
+            padding: 4px 5px 6px;
+            order: -1;
+            color: $accent;
+            background-color: #20251B;
+            border: none;
+            position: relative;
+            border-radius: 8px;
+
+            &:before {
+                content: "";
+                position: absolute;
+                right: -2px;
+                top: -2px;
+                background-color: $errors;
+                width: 8px;
+                height: 8px;
+                border-radius: 50%;
+            }
+
+            &.verified:before {
+                background-color: $accent;
+            }
+
+            &:hover,
+            &:focus {
+                background-color: #20251B;
+                color: $accent;
+            }
+        }
+    }
+
+    .navbar-toggler {
+        background-color: #20251B;
+        width: 44px;
+        height: 44px;
+        border-radius: 8px;
+        position: relative;
+        border: none;
+
+
+        &:focus {
+            box-shadow: none;
+        }
+
+        &__line {
+            width: 20px;
+            height: 2px;
+            display: flex;
+            background-color: $accent;
+            position: absolute;
+            left: 50%;
+            top: 15px;
+            transform: translate(-50%, 0);
+            transition: .4s;
+
+            &:nth-child(2) {
+                top: 21px;
+            }
+
+            &:nth-child(3) {
+                top: 27px;
+            }
+        }
+
+        &[aria-expanded="true"] {
+            .navbar-toggler__line {
+                top: 19px;
+                transform: translate(-50%, 0) rotate(45deg);
+
+                &:nth-child(2) {
+                    top: 19px;
+                    transform: translate(-50%, 0) rotate(-45deg);
+                }
+
+                &:nth-child(3) {
+                    opacity: 0;
+                }
+            }
+        }
+    }
+
+    .navbar-nav {
+        .dropdown-menu {
+            border: none;
+          
+
+            .dropdown-item {
+                padding: 12px 25px;
+
+                &::after {
+                    display: none;
+                }
+            }
+        }
+    }
+
+    .navbar-collapse {
+        margin: 0 -20px 0;
+        padding: 0px 20px;
+        z-index: 1;
+        background-color: #080807;
+        transform: translate(0, -66px);
+        position: relative;
+
+        .navbar-toggler {
+            margin-top: 22px;
+        }
+
+        &:before {
+            content: "";
+            position: absolute;
+            top: 78px;
+            left: 0;
+            right: 0;
+            border: 1px solid #242424;
+        }
+    }
+
+    .navbar-nav_country {
+        position: absolute;
+        right: 20px;
+        top: 24px;
+
+        .dropdown-menu {
+            position: absolute;
+            border: 1px solid #4F4F4F;
+            left: -10px;
+        }
+    }
+
+    .navbar-nav_language {
+        right: 120px;
+    }
+
+
+    .navbar-nav_main-navigation {
+        margin: 32px 0 128px;
+
+        .nav-link {
+            font-size: 20px;
+        }
+    }
+
+
+
     input {
         padding: 22.5px 20px;
     }
