--- a/dev/templates/header.html
+++ b/dev/templates/header.html
@@ -1,90 +1,21 @@
-<header>
-    <nav class="navbar navbar-expand-lg ">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-                <img src="./assets/img/logo.svg" alt="">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-                <ul class="navbar-nav navbar-nav_country">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Україна
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="index.html">Україна</a></li>
-                            <li><a class="dropdown-item" href="index.html">Польща</a></li>
-                            <li><a class="dropdown-item" href="index.html">Чехія</a></li>
-                        </ul>
-                    </li>
-                </ul>
-
-
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
-                         </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
-                    </li>
-                </ul>
-
-                <ul class="navbar-nav navbar-nav_language">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            ua
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="index.html">ua</a></li>
-                            <li><a class="dropdown-item" href="index.html">pl</a></li>
-                            <li><a class="dropdown-item" href="index.html">en</a></li>
-                        </ul>
-                    </li>
-                </ul>
-
-                <div class="btn-row">
-                    <a href="sign-in.html" class="btn btn-primary">реєстрація</a>
-                    <a href="index.html" class="btn btn-primary btn-exit d-lg-none">вийти з акаунту</a>
-                </div>
-            </div>
-
-            <a href="#" class="btn btn-primary btn-user">AE</a>
-        </div>
-        </div>
-    </nav>
-</header>
-<br>
-<hr>
 <header class="login">
-    <nav class="navbar navbar-expand-lg ">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
             <a class="navbar-brand" href="index.html">
                 <img src="./assets/img/logo.svg" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler__line"></span>
+                <span class="navbar-toggler__line"></span>
+                <span class="navbar-toggler__line"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-                <ul class="navbar-nav navbar-nav_country">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
+                    <span class="navbar-toggler__line"></span>
+                    <span class="navbar-toggler__line"></span>
+                    <span class="navbar-toggler__line"></span>
+                </button>
+                <ul class="navbar-nav navbar-nav_country navbar-nav_middle ">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Україна
@@ -98,29 +29,41 @@
                 </ul>
 
 
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Home</a>
+                <ul class="navbar-nav navbar-nav_main-navigation">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            послуги
+                         </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="services-1.html">перекази по Україні</a></li>
+                            <li><a class="dropdown-item" href="#">міжнародні перекази</a></li>
+                            <li><a class="dropdown-item" href="#">swift-перекази</a></li>
+                            <li><a class="dropdown-item" href="#">обмін криптовалюти</a></li>
+                            <li><a class="dropdown-item" href="#">переказ юаня у Китай</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" aria-current="page" href="#">як це працює</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">де нас знайти</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
+                            клієнтам
                          </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Action</a></li>
                             <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
-                    </li>
+                  
                 </ul>
 
-                <ul class="navbar-nav navbar-nav_language">
+                <ul class="navbar-nav navbar-nav_language navbar-nav_small ms-xl-auto">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             ua
@@ -134,13 +77,14 @@
                 </ul>
 
                 <div class="btn-row">
-                    <a href="sign-in.html" class="btn btn-primary btn-restration">реєстрація</a>
+                    <a href="sign-in.html" class="btn btn-secondary btn-registration">реєстрація</a>
                     <a href="index.html" class="btn btn-primary btn-exit d-lg-none">вийти з акаунту</a>
                 </div>
             </div>
 
-            <a href="#" class="btn btn-primary btn-user">AE</a>
+            <a href="#" class="btn btn-secondary btn-user verified">AE</a>
         </div>
         </div>
     </nav>
 </header>
+ 
