markap: added status badge

--- a/dev/sass/global.scss
+++ b/dev/sass/global.scss
@@ -47,9 +47,9 @@ h6 {
 a {
     color: $accent;
     text-decoration: none;
-    
+
     &:hover {
-      
+
         text-decoration: underline;
     }
 }
@@ -168,7 +168,7 @@ a {
         max-width: 56px;
         height: 56px;
         position: relative;
-        
+
         &:hover {
             border-color: $body-text;
         }
@@ -210,7 +210,25 @@ a {
     }
 }
 
+.status {
+    display: inline-block;
+    border: 1px solid #242424;
+    border-radius: 3px;
+    padding: 5px 10px 9px;
+    line-height: 1;
 
+    &.status-looks-at {
+        color: $verification;
+    }
+
+    &.status-verifications {
+        color: $accent;
+    }
+
+    &.status-verification-failed {
+        color: $errors;
+    }
+}
 
 ::selection {
     color: $system;
