--- a/dev/templates/header.html
+++ b/dev/templates/header.html
@@ -15,6 +15,9 @@
                     <span class="navbar-toggler__line"></span>
                     <span class="navbar-toggler__line"></span>
                 </button>
+                <div class="status status-verification-failed">
+                    верифікацію не пройдено
+                </div>
                 <ul class="navbar-nav navbar-nav_country navbar-nav_middle ">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
