--- a/dev/sass/header.scss
+++ b/dev/sass/header.scss
@@ -1,4 +1,19 @@
 header {
+    background-color: #373737;
+    transition: .3s;
+    &.fixed {
+        backdrop-filter: blur(24.5px);
+        background: transparent;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        + .wrapper {
+            padding-top: 156px;
+        }
+
+    }
+
     .navbar {
         padding: 0;
 
@@ -38,7 +53,7 @@ header {
         display: none;
     }
 
-    
+
     .btn-exit {
         display: block;
     }
@@ -50,6 +65,22 @@ header {
         display: flex;
         align-items: center;
         justify-content: center;
+        position: relative;
+
+        &:before {
+            content: "";
+            position: absolute;
+            right: -2px;
+            top: -2px;
+            background-color: $errors;
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+        }
+
+        &.verified:before {
+            background-color: $accent;
+        }
     }
 }
 
