--- a/dev/sass/media/_media_max_width1024.scss
+++ b/dev/sass/media/_media_max_width1024.scss
@@ -21,6 +21,11 @@
                 max-height: 25px;
             }
         }
+        &.fixed {
+            + .wrapper {
+                padding-top: 66px;
+            }
+        }
     }
 
     .login {
@@ -34,21 +39,6 @@
             border: none;
             position: relative;
             border-radius: 8px;
-
-            &:before {
-                content: "";
-                position: absolute;
-                right: -2px;
-                top: -2px;
-                background-color: $errors;
-                width: 8px;
-                height: 8px;
-                border-radius: 50%;
-            }
-
-            &.verified:before {
-                background-color: $accent;
-            }
 
             &:hover,
             &:focus {
