--- a/dev/sass/global.scss
+++ b/dev/sass/global.scss
@@ -3,6 +3,9 @@ body {
     color: $body-text;
     font-size: 16px;
     font-family: $font-primary;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 h1,
@@ -36,7 +39,7 @@ h4 {
 
 h5 {
     font-size: 24px;
-    line-height: 20px;
+    line-height: 36px;
 }
 
 h6 {
@@ -52,6 +55,10 @@ a {
 
         text-decoration: underline;
     }
+}
+
+.container {
+    max-width: 1464px;
 }
 
 .color-list {
@@ -228,6 +235,21 @@ a {
     &.status-verification-failed {
         color: $errors;
     }
+}
+
+
+.social-nav {
+    display: flex;
+    gap: 28px;
+}
+
+.icon {
+    display: flex;
+    width: 50px;
+    height: 50px;
+    background: #141810;
+    border-radius: 8px;
+    padding: 13px;
 }
 
 ::selection {
