--- a/dev/sass/media/_media_max_width1024.scss
+++ b/dev/sass/media/_media_max_width1024.scss
@@ -1,4 +1,5 @@
 @media screen and (max-width: 1024px) {
+   
     header {
         .container {
             padding: 11px 20px;
@@ -253,5 +254,9 @@
 
     .input-row {
         display: block;
+    }
+
+    section {
+        padding-bottom:  $section-padding-mb;
     }
 }
