--- a/dev/templates/head.html
+++ b/dev/templates/head.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
     <title>Onebit 02.10</title>
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/nice-select2.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
