style: form-exchange desktop done

--- a/dev/sass/footer.scss
+++ b/dev/sass/footer.scss
@@ -84,5 +84,5 @@ footer {
     left: 12px;
     right: 12px;
     top: 0;
-    border-top: 1px solid #242424;
+    border-top: 1px solid $light-black;
 }
