--- a/dev/sass/media/_media_max_width1024.scss
+++ b/dev/sass/media/_media_max_width1024.scss
@@ -10,7 +10,7 @@
                 bottom: 0;
                 left: 0;
                 width: 100vw;
-                border: 1px solid #242424;
+                border: 1px solid $light-black;
             }
         }
 
@@ -142,7 +142,7 @@
             top: 78px;
             left: 0;
             right: 0;
-            border: 1px solid #242424;
+            border: 1px solid $light-black;
         }
 
         .status {
