--- a/dev/sass/variables.scss
+++ b/dev/sass/variables.scss
@@ -8,6 +8,7 @@ $background: #080807;
 $system: #10100E;
 $stroke: #4F4F4F;
 $body-text: #8E938C;
+$light-black:#242424;
 $titles: #F7FFEE;
 
 $accent: #B1FF5C;
