--- a/dev/sass/global.scss
+++ b/dev/sass/global.scss
@@ -224,7 +224,7 @@ section {
 
 .status {
     display: inline-block;
-    border: 1px solid #242424;
+    border: 1px solid $light-black;
     border-radius: 3px;
     padding: 5px 10px 9px;
     line-height: 1;
@@ -242,7 +242,6 @@ section {
     }
 }
 
-
 .social-nav {
     display: flex;
     gap: 28px;
@@ -256,6 +255,71 @@ section {
     border-radius: 8px;
     padding: 13px;
 }
+
+.col-lg-6.col-xl-4 {
+    .scroll {
+        max-height: 300px;
+        width: 400px;
+        border: 1px solid $titles;
+    }
+}
+
+
+
+/*scroll*/
+
+.scroll-x::-webkit-scrollbar-thumb {
+    background-color: $accent;
+    border-radius: 5px;
+}
+
+.scroll-x::-webkit-scrollbar {
+    height: 3px;
+    background-color: #242424;
+    border: 0px solid #242424;
+    border-radius: 5px;
+}
+
+// .scroll::-webkit-scrollbar {
+//     margin: 5px;
+//     width: 2px;
+//     border-radius: 5px;
+// // }
+
+// .scroll::-webkit-scrollbar-thumb {
+//     background-color: $accent;
+//     background-clip: padding-box;
+//     border: 0px solid #242424;
+//     border-radius: 5px;
+
+//     &:hover {
+//         background-color: $accent-hover;
+//         cursor: pointer;
+//     }
+// }
+
+// .scroll::-webkit-scrollbar-track {
+//     border-radius: 5px;
+//     background-color: #242424;
+//     cursor: pointer;
+// }
+
+// .scroll::-webkit-scrollbar-corner{
+//     margin-right: 100px;
+// }
+
+
+/* FireFox */
+.scroll {
+    scrollbar-color: $accent #242424;
+    padding-right:8px;
+    overflow: auto;
+}
+
+
+
+
+
 
 ::selection {
     color: $system;
