--- a/dev/templates/first-screen.html
+++ b/dev/templates/first-screen.html
@@ -1,6 +1,6 @@
 <section class="banner">
     <div class="container">
-        <!-- <div class="banner-col">
+        <div class="banner-col">
             <div class="banner-text">
                 <h1 class="banner-title"> обмін криптовалют разом з onebit</h1>
                 <h5 class="banner-subtitle">Проводячи угоду з onebit, ви отримуєте найвигідніші умови обміну криптовалют</h5>
@@ -38,9 +38,10 @@
             </div>
 
             <a href="#" class="banner-link">топ крипто-фіатних пар <svg><use href="#icon-arrow"></use></svg>  </a>
-        </div> -->
+        </div> 
         <div class="banner-col">
             @@include('form-exchange.html')
+            <img src="/assets/img/light.svg" class="form-light" alt="light">
         </div>
     </div>
 </section>
