--- a/dev/style.scss
+++ b/dev/style.scss
@@ -18,6 +18,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @import "sass/form";
 @import "sass/header";
 @import "sass/banner";
+@import "sass/advanages";
 @import "sass/form-exchange";
 @import "sass/first-screen";
 @import "sass/footer";
