--- a/dev/sass/global.scss
+++ b/dev/sass/global.scss
@@ -270,8 +270,10 @@ section {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    max-width: 705px;
     gap: 20px;
-    margin-bottom: 100px;
+    margin: 0 auto 100px;
+
     h2 {
         margin-bottom: 0;
     }
@@ -279,6 +281,14 @@ section {
     h5 {
         color: $body-text;
         font-weight: 400;
+    }
+
+    &.case-2 {
+        text-align: left;
+        flex-direction: row;
+        margin: 0 0 100px;
+        max-width: 100%;
+        align-items: flex-end;
     }
 }
 
