--- a/dev/style.scss
+++ b/dev/style.scss
@@ -19,6 +19,8 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @import "sass/header";
 @import "sass/banner";
 @import "sass/advanages";
+@import "sass/steps";
+@import "sass/cityes";
 @import "sass/form-exchange";
 @import "sass/first-screen";
 @import "sass/footer";
