style: footer mobile done

--- a/dev/sass/footer.scss
+++ b/dev/sass/footer.scss
@@ -76,6 +76,7 @@ footer {
     font-weight: 600;
     padding: 38px 12px;
     position: relative;
+    color: $stroke;
 }
 
 .container.copyright:before {
