--- a/dev/sass/media/_media_max_width1299.scss
+++ b/dev/sass/media/_media_max_width1299.scss
@@ -4,4 +4,22 @@
             padding: 50px 12px;
         }
     }
+
+    .social-nav {
+        gap: 20px;
+    }
+
+    .column-lg {
+        gap: 65px;
+    }
+
+    .footer-nav {
+        h5 {
+            font-size: 24px;
+        }
+
+        a {
+            font-size: 18px;
+        }
+    }
 }
