--- a/dev/style.scss
+++ b/dev/style.scss
@@ -18,10 +18,12 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @import "sass/form";
 @import "sass/header";
 @import "sass/banner";
+@import "sass/first-screen";
+@import "sass/form-exchange";
 @import "sass/advanages";
 @import "sass/steps";
 @import "sass/cityes";
-@import "sass/form-exchange";
-@import "sass/first-screen";
+@import "sass/faq";
+@import "sass/questions";
 @import "sass/footer";
 @import "sass/media/media";
