feat: creat accordion desktop

--- a/dev/templates/cityes.html
+++ b/dev/templates/cityes.html
@@ -5,10 +5,10 @@
             <a href="#" class="cityes-link">дивитись усі міста</a>
         </div>
         <nav class="city-list">
-            <a href="#" class="city-item" style="background-image: url(assets/img/animation-kyiv.png);">Київ</a>
-            <a href="#" class="city-item" style="background-image: url(assets/img/animation-kharkiv.png);">Харків</a>
-            <a href="#" class="city-item" style="background-image: url(assets/img/animation-lviv.png);">Львів</a>
-            <a href="#" class="city-item" style="background-image: url(assets/img/animation-odesa.png);">Одеса</a>
+            <a href="cities/kyiv.html" class="city-item" style="background-image: url(assets/img/animation-kyiv.png);">Київ</a>
+            <a href="cities/kharkiv.html" class="city-item" style="background-image: url(assets/img/animation-kharkiv.png);">Харків</a>
+            <a href="cities/lviv.html" class="city-item" style="background-image: url(assets/img/animation-lviv.png);">Львів</a>
+            <a href="cities/odesa.html" class="city-item" style="background-image: url(assets/img/animation-odesa.png);">Одеса</a>
         </nav>
     </div>
 </section>
