--- a/dev/sass/global.scss
+++ b/dev/sass/global.scss
@@ -20,32 +20,32 @@ h6 {
 
 h1 {
     font-size: 58px;
-    line-height: 70px;
+    line-height: 1.2;
 }
 
 h2 {
     font-size: 48px;
-    line-height: 60px;
+    line-height: 1.25;
 }
 
 h3 {
     font-size: 36px;
-    line-height: 34px;
+    line-height: 1;
 }
 
 h4 {
     font-size: 32px;
-    line-height: 42px;
+    line-height: 1.3;
 }
 
 h5 {
     font-size: 24px;
-    line-height: 36px;
+    line-height: 1.5;
 }
 
 h6 {
     font-size: 20px;
-    line-height: 34px;
+    line-height: 1.7;
 }
 
 a {
