--- a/dev/templates/faq.html
+++ b/dev/templates/faq.html
@@ -1,46 +1,84 @@
 <section class="faq">
     <div class="container">
         <div class="template-title">
-            <h2>найчастіші питання</h2>
+            <h2 >найчастіші питання</h2>
             <h5>Ми подбали про ваш час – зібрали найпопулярніші та відповіді на них</h5>
         </div>
-        <div class="accordion" id="accordionPanelsStayOpenExample">
+        <div class="accordion" id="accordionFAQExample">
             <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                  Accordion Item #1
-                </button>
-              </h2>
-              <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
-                <div class="accordion-body">
-                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#FAQ-collapseOne" aria-expanded="false" aria-controls="FAQ-collapseOne">
+                Що таке KYC і для чого він потрібен?
+              </button>
+            </h2>
+                <div id="FAQ-collapseOne" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        KYC — термін банківського та біржового регулювання для фінансових інститутів і букмекерських контор, а також інших компаній, які працюють з грошима приватних осіб, що означає, що вони повинні ідентифікувати та встановити особу контрагента, перш ніж проводити фінансову операцію.
+                        KYC — термін банківського та біржового регулювання для фінансових інститутів і букмекерських контор, а також інших компаній, які працюють з грошима приватних осіб, що означає, що вони повинні ідентифікувати та встановити особу контрагента, перш ніж проводити фінансову операцію.
+                        KYC — термін банківського та біржового регулювання для фінансових інститутів і букмекерських контор, а також інших компаній, які працюють з грошима приватних осіб, що означає, що вони повинні ідентифікувати та встановити особу контрагента, перш ніж проводити фінансову операцію.
+                    </div>
                 </div>
-              </div>
             </div>
             <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                  Accordion Item #2
-                </button>
-              </h2>
-              <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
-                <div class="accordion-body">
-                  <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#FAQ-collapseTwo" aria-expanded="false" aria-controls="FAQ-collapseTwo">
+                Чи обов’язково проходити реєстрацію для того, щоб здійснити операцію на сайті?
+              </button>
+            </h2>
+                <div id="FAQ-collapseTwo" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        KYC — термін банківського та біржового регулювання для фінансових інститутів і букмекерських контор, а також інших компаній, які працюють з грошима приватних осіб, що означає, що вони повинні ідентифікувати та встановити особу контрагента, перш ніж проводити фінансову операцію.
+                    </div>
                 </div>
-              </div>
             </div>
             <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                  Accordion Item #3
-                </button>
-              </h2>
-              <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
-                <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#FAQ-collapseThree" aria-expanded="false" aria-controls="FAQ-collapseThree">
+                Що потрібно для проходження верифікації?
+              </button>
+            </h2>
+                <div id="FAQ-collapseThree" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        KYC — термін банківського та біржового регулювання для фінансових інститутів і букмекерських контор, а також інших компаній, які працюють з грошима приватних осіб, що означає, що вони повинні ідентифікувати та встановити особу контрагента, перш ніж проводити фінансову операцію.
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#FAQ-collapseFour" aria-expanded="false" aria-controls="FAQ-collapseFour">
+                Чи безпечно завантажувати документи? 
+              </button>
+            </h2>
+                <div id="FAQ-collapseFour" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        KYC — термін банківського та біржового регулювання для фінансових інститутів і букмекерських контор, а також інших компаній, які працюють з грошима приватних осіб, що означає, що вони повинні ідентифікувати та встановити особу контрагента, перш ніж проводити фінансову операцію.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#FAQ-collapseFive" aria-expanded="false" aria-controls="FAQ-collapseFive">
+                Як працює реферальна програма onebit? Які бонуси ви можете отримати?
+              </button>
+            </h2>
+                <div id="FAQ-collapseFive" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        KYC — термін банківського та біржового регулювання для фінансових інститутів і букмекерських контор, а також інших компаній, які працюють з грошима приватних осіб, що означає, що вони повинні ідентифікувати та встановити особу контрагента, перш ніж проводити фінансову операцію.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#FAQ-collapseSix" aria-expanded="false" aria-controls="FAQ-collapseSix">
+                Що таке onebit-коїни, і для чого вони?
+              </button>
+            </h2>
+                <div id="FAQ-collapseSix" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        KYC — термін банківського та біржового регулювання для фінансових інститутів і букмекерських контор, а також інших компаній, які працюють з грошима приватних осіб, що означає, що вони повинні ідентифікувати та встановити особу контрагента, перш ніж проводити фінансову операцію.
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
