feat: creat dektop slider review

--- a/dev/sass/media/_media_max_width1024.scss
+++ b/dev/sass/media/_media_max_width1024.scss
@@ -264,6 +264,10 @@
         padding-bottom: $section-padding-mb;
     }
 
+    .review {
+        margin-bottom: $section-padding-mb;
+    }
+
     .social-nav {
         gap: 12px;
     }
