--- a/dev/templates/advantages.html
+++ b/dev/templates/advantages.html
@@ -12,7 +12,11 @@
                     <h6>Ми працюємо, піклуючись про кожного нашого клієнта</h6>
                 </div>
                 <div class="advantage-img">
-                    <img src="./assets/img/advantage-1.png" alt="advantage">
+                    <picture class="advantage-img__img">
+                        <source media="(min-width:1025px)" srcset="./assets/img/advantage-1.png">
+                        <img src="./assets/img/advantage-1-mob.png" alt="advantage">
+                    </picture>
+                      
                 </div>
             </div>
             <div class="advantage-item">
@@ -21,7 +25,10 @@
                     <h6>Напряму задавайте цікаві вам питання у будь-який час</h6>
                 </div>
                 <div class="advantage-img">
-                    <img src="./assets/img/advantage-2.png" alt="advantage">
+                    <picture class="advantage-img__img">
+                        <source media="(min-width:1025px)" srcset="./assets/img/advantage-2.png">
+                        <img src="./assets/img/advantage-2-mob.png" alt="advantage">
+                    </picture>
                 </div>
             </div>
             <div class="advantage-item">
@@ -31,7 +38,10 @@
                   
                 </div>
                 <div class="advantage-img">
-                    <img src="./assets/img/advantage-3.png" alt="advantage">
+                    <picture class="advantage-img__img">
+                        <source media="(min-width:1025px)" srcset="./assets/img/advantage-3.png">
+                        <img src="./assets/img/advantage-3-mob.png" alt="advantage">
+                    </picture>
                 </div>
             </div>
             <div class="advantage-item">
@@ -40,7 +50,10 @@
                     <h6>Гарантована фіксація курсу після фінального підтвердження blockchain</h6>
                 </div>
                 <div class="advantage-img">
-                    <img src="./assets/img/advantage-4.png" alt="advantage">
+                    <picture class="advantage-img__img">
+                        <source media="(min-width:1025px)" srcset="./assets/img/advantage-4.png">
+                        <img src="./assets/img/advantage-4-mob.png" alt="advantage">
+                    </picture>
                 </div>
             </div>
         </div>
