--- a/dev/templates/first-screen.html
+++ b/dev/templates/first-screen.html
@@ -1,7 +1,7 @@
 <section class="banner">
     <div class="container">
         <div class="banner-col">
-            <div class="banner-text">
+            <div class="banner-text d-none d-lg-block">
                 <h1 class="banner-title"> обмін криптовалют разом з onebit</h1>
                 <h5 class="banner-subtitle">Проводячи угоду з onebit, ви отримуєте найвигідніші умови обміну криптовалют</h5>
             </div>
@@ -40,10 +40,12 @@
             <a href="#" class="banner-link">топ крипто-фіатних пар <svg><use href="#icon-arrow"></use></svg>  </a>
         </div> 
         <div class="banner-col">
+            <div class="banner-text d-lg-none">
+                <h1 class="banner-title"> обмін криптовалют разом з onebit</h1>
+                <h5 class="banner-subtitle">Проводячи угоду з onebit, ви отримуєте найвигідніші умови обміну криптовалют</h5>
+            </div>
             @@include('form-exchange.html')
             <img src="/assets/img/light.svg" class="form-light" alt="light">
         </div>
     </div>
 </section>
- 
-
