--- a/dev/templates/steps.html
+++ b/dev/templates/steps.html
@@ -4,48 +4,28 @@
             <h2>3 простих кроки почати</h2>
             <h5>Не знаеш з чого почати? Слідуй цим простим крокам для швидкого старту</h5>
         </div>
-
-        <div class="test-list">
-            <div class="list-item"></div>
-            <div class="list-item"></div>
-            <div class="list-item"></div>
-            <div class="list-item"></div>
-            <div class="list-item"></div>
-            <div class="list-item"></div>
-            <div class="list-item"></div>
-            <div class="list-item"></div>
-            <div class="list-item"></div>
-            <div class="list-item"></div>
-            <div class="list-item"></div>
-            <div class="list-item"></div>
-            <div class="list-item"></div>
-            <div class="list-item"></div>
-            <div class="list-item"></div>
-            <div class="list-item"></div>
-        </div>
-
         <div class="steps-list">
-            <div class="step-item">
+            <a href="#" class="step-item">
                 <div class="step-number"></div>
                 <h3 class="step-title">реєстрація</h3>
                 <h6 class="step-description">
                     зареєструйся, щоб отримати можливість приєднатися до бонусної системи та отримати додаткові можливості
                 </h6>
-            </div>
-            <div class="step-item">
+            </a>
+            <a href="#"  class="step-item">
                 <div class="step-number"></div>
                 <h3 class="step-title">верифікація</h3>
                 <h6 class="step-description">
                     пройдіть верифікацію особи та отримайте можливість здійснювати обмін фіатних валют
                 </h6>
-            </div>
-            <div class="step-item">
+            </a>
+            <a href="#"  class="step-item">
                 <div class="step-number"></div>
                 <h3 class="step-title">торгівля</h3>
                 <h6 class="step-description">
                     користуйтеся найвигіднішим курсом для обміну валют
                 </h6>
-            </div>
+            </a>
         </div>
     </div>
 </section>
