--- a/dev/sass/form-exchange.scss
+++ b/dev/sass/form-exchange.scss
@@ -2,7 +2,7 @@
     border-radius: 20px;
     padding: 40px;
     border: 1px solid $stroke;
-    max-width: 540px;
+    width: 540px;
     position: relative;
     background: $background;
     .give {
