--- a/dev/sass/media/_media copy.scss
+++ b/dev/sass/media/_media copy.scss
@@ -3,7 +3,9 @@
 @import "media_min_width1025";
 @import "media_min_width1200";
 @import "media_min_width1300";
+@import "media_min_width1400";
 
+@import "media_max_width1399";
 @import "media_max_width1299";
 @import "media_max_width1199";
 @import "media_max_width1024";
