--- a/dev/sass/media/_media_max_width1024.scss
+++ b/dev/sass/media/_media_max_width1024.scss
@@ -1,4 +1,24 @@
 @media screen and (max-width: 1024px) {
+    // h1 {
+    //     font-size: 32px;
+    // }
+
+    h2 {
+        font-size: 32px;
+    }
+
+    h3 {
+        font-size: 24px;
+    }
+
+    h5 {
+        font-size: 18px;
+    }
+
+    h6 {
+        font-size: 16px;
+    }
+
     .container {
         padding: 0 20px;
     }
@@ -12,7 +32,7 @@
                 position: absolute;
                 bottom: 0;
                 left: 0;
-                width: 100vw;
+                right: 0;
                 border: 1px solid $light-black;
             }
         }
@@ -204,7 +224,8 @@
 
         &.btn-large {
             border-radius: 8px;
-            padding: 21px 94px 23px;
+            padding: 21px 34px 23px;
+            font-size: 16px;
         }
     }
 
@@ -276,6 +297,271 @@
         width: 44px;
         height: 44px;
         padding: 10px;
+        border-radius: 6px;
+    }
+
+    .banner {
+        padding-top: 20px;
+        padding-bottom: 100px;
+
+        >.container {
+            flex-direction: column-reverse;
+        }
+
+        &-col {
+            &:first-child {
+                display: flex;
+                flex-direction: column-reverse;
+                gap: 40px;
+            }
+        }
+
+        .banner-text {
+            margin-bottom: 40px;
+        }
+
+        h1 {
+            margin-bottom: 20px;
+            font-size: 32px;
+        }
+
+        h5 {
+            margin-bottom: 0;
+        }
+
+        +section {
+            margin-top: 0;
+        }
+    }
+
+    .form-exchange {
+        border: none;
+        background: transparent;
+        padding: 0;
+        width: auto;
+
+        .input-row {
+            display: flex;
+            border-radius: 10px;
+            padding: 9px 10px 9px 16px;
+        }
+
+        .give {
+            margin-bottom: 20px;
+        }
+
+        label {
+            display: none;
+        }
+
+        .btn {
+            margin-bottom: 32px;
+        }
+    }
+
+    .exchange-info {
+        margin-bottom: 40px;
+    }
+
+    .exchange-info__title,
+    .exchange-info__value {
+        font-size: 14px;
+    }
+
+    .exchange-info_row .exchange-info-item {
+        gap: 12px;
+    }
+
+    .form-light {
+        display: none;
+    }
+
+    .banner-advantages {
+        gap: 16px;
+        margin-bottom: 0;
+    }
+
+    .banner-advantages-item {
+        font-size: 14px;
+        gap: 16px;
+    }
+
+    .nice-select {
+        height: 48px;
+        font-size: 14px;
+        min-width: 161px;
+    }
+
+    .template-title {
+        gap: 16px;
+        margin: 0 auto 60px;
+
+        &.case-2 {
+            margin-bottom: 60px;
+        }
+    }
+
+    .advantages-list {
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
+
+    .advantage-item {
+        flex-direction: column;
+        border-radius: 12px;
+        max-width: 560px;
+        margin: 0 auto;
+    }
+
+    .advantage-text {
+        padding: 24px;
+        margin-bottom: 0;
+    }
+
+    .advantage-img {
+        padding: 0 24px 24px 24px;
+        text-align: center;
+
+        picture {
+            display: inline-block;
+        }
+    }
+
+    .steps-list {
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
+
+    .step-item {
+        max-width: 320px;
+        margin: 0 auto;
+        padding: 24px;
+    }
+
+    .step-number {
+        font-size: 16px;
+        margin-bottom: 40px;
+    }
+
+    .step-title {
+        margin-bottom: 12px;
+    }
+
+    .step-description {
+        margin-bottom: 40px;
+    }
+
+    .cityes {
+        padding-bottom: 164px;
+
+        .container {
+            position: relative;
+        }
+
+        &-link {
+            position: absolute;
+            bottom: -64px;
+            left: 20px;
+        }
+    }
+
+    .city-item {
+        height: 98px;
+        font-size: 20px;
+        padding-left: 24px;
+    }
+
+    .review {
+        border-radius: 16px;
+        padding: 40px 0 60px;
+
+        .container {
+            padding: 0 10px;
+        }
+
+        .swiper-slide {
+
+            padding: 20px 10px 80px;
+        }
+    }
+
+    .review-text {
+        font-size: 20px;
+        margin-bottom: 40px;
+    }
+
+    .review-text::before {
+        display: none;
+        width: 84px;
+        height: 70px;
+        top: -20px;
+        left: -10px;
+    }
+
+    .swiper-slide-active {
+        .review-text::before {
+            display: inline-block;
+        }
+    }
+
+    blockquote {
+        margin-top: 0;
+    }
+
+    .swiper-navigation {
+        height: 44px;
+        padding-right: 10px;
+        bottom: 75px;
+        gap: 8px;
+    }
+
+    .swiper {
+        .swiper-pagination {
+            bottom: 10px;
+        }
+    }
+
+    .swiper-button-prev,
+    .swiper-button-next {
+        height: 44px;
+        width: 44px;
+
+        &:after {
+            width: 20px;
+            height: 14px;
+            background: url(./assets/img/icon-arrow.svg) center / contain no-repeat;
+        }
+    }
+
+    .review-autor {
+        font-size: 14px;
+        margin-bottom: 0;
+    }
+
+    .review-date {
+        font-size: 12px;
+    }
+
+    .review-info {
+        padding-right: 110px;
+    }
+
+    .accordion-button {
+        font-size: 16px;
+        padding: 0;
+        min-height: 114px;
+    }
+
+    .accordion-button:after {
+        height: 24px;
+        width: 24px;
+        margin-left: 24px;
+        background: url("data:image/svg+xml,%3Csvg width='27' height='27' viewBox='0 0 27 27' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='12' width='3' height='27' fill='%23B1FF5C'/%3E%3Crect x='27' y='12' width='3' height='27' transform='rotate(90 27 12)' fill='%23B1FF5C'/%3E%3C/svg%3E%0A") center/contain no-repeat;
+    }
+
+    .accordion-body {
+        font-size: 16px;
+        padding-bottom: 55px;
     }
 
     .footer-logo {
